force-app/main/default/objects/ConfigureOrderBooking__mdt/ConfigureOrderBooking__mdt.object-meta.xml
<CustomObject>
    <label>ConfigureOrderBooking</label>
    <pluralLabel>ConfigureOrderBookings</pluralLabel>
</CustomObject>