force-app/main/default/objects/ConfigureOrderBooking__mdt/fields/Booking_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Booking_Mapping__c</fullName>
    <label>Booking Mapping</label>
    <referenceTo>Booking_Mapping__mdt</referenceTo>
    <relationshipLabel>ConfigureOrderBookings</relationshipLabel>
    <relationshipName>ConfigureOrderBookings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>