force-app/main/default/objects/ConfigureOrderBooking__mdt/fields/OrderAPIName__c.field-meta.xml
<CustomField>
    <fullName>OrderAPIName__c</fullName>
    <label>OrderAPIName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>