force-app/main/default/objects/ConfigureOrderBooking__mdt/fields/OrderValue__c.field-meta.xml
<CustomField>
    <fullName>OrderValue__c</fullName>
    <description>Give value as &apos;Revenue&apos;  if condition is Type = &apos;Revenue&apos;
Give value as (&apos;Revenue&apos;,&apos;Renewal&apos;) if condition is Type IN (&apos;Revenue&apos;,&apos;Renewal&apos;)
Give values as  Today , Today()+5 , 2019-06-21T00:00:00Z for Date fields like CreatedDate</description>
    <inlineHelpText>Give value as &apos;Revenue&apos;  if condition is Type = &apos;Revenue&apos;
Give value as (&apos;Revenue&apos;,&apos;Renewal&apos;) if condition is Type IN (&apos;Revenue&apos;,&apos;Renewal&apos;)
Give values as  Today , Today()+5 , 2019-06-21T00:00:00Z for Date fields like CreatedDate</inlineHelpText>
    <label>OrderValue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>