force-app/main/default/objects/ConfigureOrderBooking__mdt/listViews/My_View.listView-meta.xml
<ListView>
    <fullName>My_View</fullName>
    <columns>OrderAPIName__c</columns>
    <columns>Operator__c</columns>
    <columns>OrderValue__c</columns>
    <filterScope>Everything</filterScope>
    <label>My View</label>
</ListView>