force-app/main/default/objects/ConfigureOrderBooking__mdt/listViews/new_view.listView-meta.xml
<ListView>
    <fullName>new_view</fullName>
    <columns>OrderAPIName__c</columns>
    <columns>Operator__c</columns>
    <columns>OrderValue__c</columns>
    <filterScope>Everything</filterScope>
    <label>new view</label>
</ListView>